# baxter_project

./: CMakeLists.txt  Getting-Started-with-ROS-RealSense.2.htm  README.md  package.xml
RealSense-ROS-V1.5/1.5/: Changelog.txt
RealSense-ROS-V1.5/1.5/licenses/: ReadMe.txt
RealSense-ROS-V1.5/1.5/sample/: realsense_imageviewer_launch.launch
RealSense-ROS-V1.5/1.5/sample/src/: realsense_image_viewer_nodelet.cpp  realsense_image_viewer_nodelet.h
f200_install/: install.sh
f200_install/include/: Calibration.h  InternalDefinitions.h  IvcamTypes.h  Projection.h  ivcam.h  ivcamCalibrationConstants.h  ivcamcalibration.h
f200_install/ivcamsample/: ivcam_sample.cc
pr2_pick_perception/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
pr2_pick_perception/action/: GetItems.action
pr2_pick_perception/calib_files/: realsense_color.yaml  realsense_depth.yaml
pr2_pick_perception/config/: clustering_demo.bag  db_shelf.txt  item_recognition_demo.rviz  pr2.rviz
pr2_pick_perception/include/pr2_pick_perception/: cluster_points_in_box_service.h  count_points_in_box_service.h  item_descriptor_service.h  item_segmentation.h  obj_recognition_service.h  pcl.h  planar_pca_service.h  pointcloud_realsense.h  shelf_cropping.h  shelf_localization.h  shelf_localization_lidar.h
pr2_pick_perception/launch/: camera_info.launch  crop_shelf.launch  item_recognition_demo.launch  item_segmentation.launch  kinect_frames.launch  match_cluster.launch  openni_launch.launch  perception.launch  pointcloud_realsense.launch  shelf_recognition_KinPR2.launch  shelf_recognition_LIDAR_PR2.launch
pr2_pick_perception/models/shelf/: shelf.ply  view_0.ply  view_1.pcd  view_1.ply
pr2_pick_perception/msg/: BoundingBox.msg  Box.msg  Cell.msg  Cluster.msg  ClusterList.msg  ColorHistogram.msg  DescriptorExample.msg  ItemDescriptor.msg  MultiItemCloud.msg  Object.msg  ObjectDetectionRequest.msg  ObjectList.msg  ObjectMatchRequest.msg
pr2_pick_perception/scripts/: 2016-02-11-16-38-20.bag  evaluate_color_histograms.py  evaluate_obj_recognition.py  item_classifier_service.py  pcl_utilities.py  record.sh  record_kinect.sh  record_pc.sh  static_tf.py  test_item_classifier.py  try_planar_pca.py
pr2_pick_perception/src/: camera_info.cpp  cluster_points_in_box_service.cpp  convert_rosbag_to_descriptors.cpp  count_points_in_box_service.cpp  item_descriptor_service.cpp  item_segmentation.cpp  obj_recognition_cluster.cpp  pcl.cpp  pcl_test.cpp  planar_pca_service.cpp  pointcloud_realsense.cpp  shelf_cropping.cpp  shelf_localization.cpp  shelf_localization_LIDAR.cpp
pr2_pick_perception/src/pr2_pick_perception/: __init__.py  data_saver.py  item_classifier.py  rosbag_dataset.py  target_item_classifier.py
pr2_pick_perception/srv/: BoxPoints.srv  ClassifyCluster.srv  ClassifyTargetItem.srv  CountPointsInBox.srv  CropShelf.srv  DeleteStaticTransform.srv  FindCentroid.srv  GetItemDescriptor.srv  LocalizeShelf.srv  MatchCluster.srv  PlanarPrincipalComponents.srv  SegmentItems.srv  SetStaticTransform.srv
scripts/: baxter_marker_pub.py  baxter_test.py  camera_publisher.py  untitled.html
src/object_modeling/: CMakeLists.txt  CMakeLists.txt~  demo.txt  modeler runs 2.txt
src/object_modeling/.svn/: wc.db
src/object_modeling/EigenUtilities/: EigenUtilities.h  ros_timestamp.cpp
src/object_modeling/G2OStaticLib/: G2OPoseGraphImpl.cpp  sac_model_registration_reprojection.h
src/object_modeling/GenerateTestData/: GenerateTestData.vcxproj.filters  stdafx.cpp
src/object_modeling/OpenCLConsoleTest/: OpenCLConsoleTest.vcxproj.filters  stdafx.cpp
src/object_modeling/OpenCLStaticLib/: BufferWrapper.cpp  Images.cl  KernelAddFloatsWithWeightsExternalWeight.cpp  KernelAddFrame.h  KernelAddFrameIfCompatible.cpp  KernelAddFrameIfCompatible.h  KernelAddFrameTo2MeansUsingStoredNormals.cpp  KernelAddVolumes.h  KernelApplyPoseToNormals.h  KernelApplyPoseToPoints.cpp  KernelApplyPoseToPoints.h  KernelBetterNormal.h  KernelDepthImageToPoints.cpp  KernelDivideFloats.h  KernelDotVolumeNormal.cpp  KernelExtractVolumeSliceFloat4.cpp  KernelExtractVolumeSliceFloat4Length.cpp  KernelExtractVolumeSliceFloat4Length.h  KernelGaussianPDFConstantX.cpp  KernelHistogramMax.cpp  KernelHistogramSum.cpp  KernelMaxFloats.cpp  KernelMinAbsVolume.h  KernelMinFloats.cpp  KernelNormalsToColorImage.cpp  KernelOptimizeErrorAndJacobianImage.h  KernelPickIfIndexFloat4.cpp  KernelPickIfIndexFloat4.h  KernelPointsToDepthImage.h  KernelRender2MeansAbs.h  KernelRenderPointsAndNormals.cpp  KernelSetFloat4.h  KernelSetInt.cpp  KernelSetUChar.cpp  KernelSetVolumeSDFBox.h  KernelTransformPoints.h  MarchingCubes.cpp  MarchingCubesManyVolumes.h  MeshTypes.h  OpenCLAllKernels.cpp  (+13 more)
src/object_modeling/alignment/: alignment.h
src/object_modeling/cmake_modules/: FindG2O.cmake  FindG2O.cmake~  FindOpenCL.cmake
src/object_modeling/conversion_utilities/: pcd_to_png.cpp
src/object_modeling/frame_provider/: frame_provider.h  frame_provider_arun.cpp  frame_provider_empty.h  frame_provider_handa.h  frame_provider_openni2.cpp  frame_provider_openni2.h  frame_provider_yuyin.h
src/object_modeling/object_model/: DisjointSet.cpp  Keypoints.hpp  LearnHistogram.cpp  MaskObject.h  OpenNIInput.h  histogramUtil.cpp  object_model.vcxproj  object_model.vcxproj.filters  object_truck.yml  object_woven.yml  opencvUtil.h  opencv_eigen.hpp  runningStatistics.h  sample_launch_params.txt  simple-registration-ref.txt  stdafx.h  vtk-libs-release.txt
src/object_modeling/old/: richard-code-snippet.txt
src/object_modeling/opencv_utilities/: opencv_utilities.cpp  pick_pixel.cpp  pick_pixel.h
src/object_modeling/python_utilities/: batch_baxter.py  luis_batch_folder.py.old
src/object_modeling/utilities/: ordering_container.h
src/object_modeling/volume_modeler/: camera_struct.h  dbow_brief_extractor.h~  dbow_place_recognition.h  dbow_place_recognition.h~  image_to_cloud.cpp  keyframe_struct.cpp  keypoints.cpp  learn_histogram.h  model_histogram.h  params_loop_closure.h  params_volume_modeler.h
src/object_modeling/volume_modeler_glut/: main.cpp  main_example.cpp
(+104 files in other folders)
